// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`viewt reducer should handle SET_GENRE 1`] = `
Object {
  "genre": "Drama",
  "isRow": true,
}
`;

exports[`viewt reducer should handle SET_LIST_FLEX_DIRECTION 1`] = `
Object {
  "genre": "",
  "isRow": true,
}
`;

exports[`viewt reducer should return the initial state 1`] = `
Object {
  "genre": "",
  "isRow": true,
}
`;
